--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/taccaci/portal#readme",
   "devDependencies": {
-    "angular-mocks": "=1.6.9",
+    "angular-mocks": "^1.6.9",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-angularjs-annotate": "^0.9.0",
@@ -33,10 +33,12 @@
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
     "istanbul-instrumenter-loader": "^3.0.1",
+    "jasmine-core": "^3.3.0",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^1.1.2",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
@@ -77,10 +79,12 @@
     "modernizr": "^3.6.0",
     "moment": "^2.22.1",
     "ng-storage": "^0.3.2",
+    "node-sass": "^4.10.0",
     "objectpath": "^1.2.1",
     "picturefill": "^3.0.2",
     "query-string": "^5.1.1",
     "rxjs": "^6.2.2",
+    "sass-loader": "^7.1.0",
     "select2": "^4.0",
     "style-loader": "^0.20.3",
     "tv4": "^1.3.0",
