--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,11 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-webpack": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
     "ngtemplate-loader": "^2.0.1",
@@ -49,8 +52,8 @@
     "angular-material": "=1.1.9",
     "angular-messages": "=1.6.1",
     "angular-sanitize": "=1.6.9",
-    "angular-schema-form": "^0.8.13",
-    "angular-schema-form-bootstrap": "^0.2.0",
+    "angular-schema-form": "^1.0.0-alpha.4",
+    "angular-schema-form-bootstrap": "^1.0.0-alpha.4",
     "angular-translate": "^2.17.1",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^1.0.3",
