--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^3.0.0",
     "ng-annotate-webpack-plugin": "^0.3.0",
     "ngtemplate-loader": "^2.0.1",
@@ -68,6 +69,7 @@
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "jquery": "^3.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
     "leaflet": "^1.3.3",
     "leaflet-easybutton": "^2.3.0",
     "modernizr": "^3.6.0",
