--- a/client/package.json
+++ b/client/package.json
@@ -68,7 +68,9 @@
     "filesaver": "0.0.13",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
+    "jasmine-core": "^3.3.0",
     "jquery": "^3.3.1",
+    "karma-jasmine": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "leaflet": "^1.3.3",
     "leaflet-easybutton": "^2.3.0",
