--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -6,35 +6,35 @@ services:
   redis:
     image: redis:4.0
     volumes:
-      - cep_prtl_redis_data:/data
+      - frontera_prtl_redis_data:/data
     ports:
       - 6379:6379
-    container_name: cep_prtl_redis
-    hostname: cep_prtl_redis
+    container_name: frontera_prtl_redis
+    hostname: frontera_prtl_redis
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   rabbitmq:
     image: rabbitmq:3.6.10-management
     volumes:
-      - cep_prtl_rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@cep_prtl_rabbitmq
+      - frontera_prtl_rabbitmq_data:/var/lib/rabbitmq/mnesia/rabbit@frontera_prtl_rabbitmq
     env_file: ../env_files/rabbitmq.env
     ports:
       - 5672:5672
       - 5673:5673
       - 15673:15673
       - 15672:15672
-    container_name: cep_prtl_rabbitmq
-    hostname: cep_prtl_rabbitmq
+    container_name: frontera_prtl_rabbitmq
+    hostname: frontera_prtl_rabbitmq
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   memcached:
     image: memcached:latest
-    container_name: cep_prtl_memcached
-    hostname: cep_prtl_memcached
+    container_name: frontera_prtl_memcached
+    hostname: frontera_prtl_memcached
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
@@ -44,24 +44,24 @@ services:
       - ES_HEAP_SIZE:2g
     volumes:
       - ../elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-      - cep_prtl_es_data:/usr/share/elasticsearch/data
+      - frontera_prtl_es_data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-    container_name: cep_prtl_elasticsearch
-    hostname: cep_prtl_elasticsearch
+    container_name: frontera_prtl_elasticsearch
+    hostname: frontera_prtl_elasticsearch
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   postgres:
     image: postgres:10.3
     volumes:
-      - cep_prtl_postgres_data:/var/lib/postgresql/data/portal
+      - frontera_prtl_postgres_data:/var/lib/postgresql/data/portal
     ports:
       - 5432:5432
-    container_name: cep_prtl_postgres
-    hostname: cep_prtl_postgres
+    container_name: frontera_prtl_postgres
+    hostname: frontera_prtl_postgres
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
     environment:
       - POSTGRES_PASSWORD=dev
       - POSTGRES_USER=dev
@@ -73,8 +73,8 @@ services:
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../nginx/gzip.conf:/etc/nginx/gzip.conf
-      - ../nginx/certificates/cep.dev.crt:/etc/ssl/cep.dev.crt
-      - ../nginx/certificates/cep.dev.key:/etc/ssl/cep.dev.key
+      - ../nginx/certificates/frontera.dev.crt:/etc/ssl/frontera.dev.crt
+      - ../nginx/certificates/frontera.dev.key:/etc/ssl/frontera.dev.key
       - ../nginx/dhparam.pem:/etc/ssl/dhparam.pem
       - ../../../.:/srv/www/portal
     links:
@@ -83,27 +83,27 @@ services:
     ports:
       - 80:80
       - 443:443
-    container_name: cep_prtl_nginx
-    hostname: cep_prtl_nginx
+    container_name: frontera_prtl_nginx
+    hostname: frontera_prtl_nginx
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   websockets:
-    image: cep-portal/portal:local
+    image: frontera-portal/portal:local
     links:
       - redis:redis
     volumes:
       - ../../../.:/srv/www/portal
     ports:
       - 9000:9000
-    container_name: cep_prtl_websockets
-    hostname: cep_prtl_websockets
+    container_name: frontera_prtl_websockets
+    hostname: frontera_prtl_websockets
     command: "uwsgi --chdir /srv/www/portal/server --gevent 1000 --workers=2 --http-websockets  --http-socket=:9000 --module portal.wsgi_websocket:application"
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   django:
-    image: cep-portal/portal:local
+    image: frontera-portal/portal:local
     links:
       - memcached:memcached
       - postgres:postgres
@@ -123,13 +123,13 @@ services:
     stdin_open: true
     tty: true
     command: ['python', './manage.py', 'runserver', '0.0.0.0:8000']
-    container_name: cep_prtl_django
-    hostname: cep_prtl_django
+    container_name: frontera_prtl_django
+    hostname: frontera_prtl_django
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
   workers:
-    image: cep-portal/portal:local
+    image: frontera-portal/portal:local
     links:
       - memcached:memcached
       - postgres:postgres
@@ -144,17 +144,17 @@ services:
       - 8.8.8.8
       - 8.8.4.4
     command: "celery -A portal worker -Q default,indexing,files,api,onboard --concurrency=2"
-    container_name: cep_prtl_workers
-    hostname: cep_prtl_workers
+    container_name: frontera_prtl_workers
+    hostname: frontera_prtl_workers
     networks:
-      - cep_prtl_net
+      - frontera_prtl_net
 
 volumes:
-  cep_prtl_redis_data:
-  cep_prtl_es_data:
-  cep_prtl_rabbitmq_data:
-  cep_prtl_postgres_data:
+  frontera_prtl_redis_data:
+  frontera_prtl_es_data:
+  frontera_prtl_rabbitmq_data:
+  frontera_prtl_postgres_data:
 
 networks:
-  cep_prtl_net:
+  frontera_prtl_net:
     driver: bridge
