--- a/server/conf/docker/docker-compose.yml
+++ b/server/conf/docker/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       build:
         context: ../../../.
         dockerfile: server/conf/docker/Dockerfile
-      image: cep-portal/portal:local
+      image: frontera-portal/portal:local
       command: /bin/bash
-      container_name: cep_prtl_django
+      container_name: frontera_prtl_django
