--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -45,8 +45,8 @@ http {
         # Extra slashes matter to Agave
         merge_slashes off;
 
-        ssl_certificate             /etc/ssl/cep.dev.crt;
-        ssl_certificate_key         /etc/ssl/cep.dev.key;
+        ssl_certificate             /etc/ssl/frontera.dev.crt;
+        ssl_certificate_key         /etc/ssl/frontera.dev.key;
         ssl_dhparam                 /etc/ssl/dhparam.pem;
         ssl_prefer_server_ciphers   on;
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
@@ -74,7 +74,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            #proxy_redirect http://django:8000/ https://cep.dev/;
+            #proxy_redirect http://django:8000/ https://frontera.dev/;
             proxy_read_timeout 360s;
         }
 
