--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,12 +7,14 @@ django-bootstrap4==1.0.1
 django-filer==1.5.0
 django-mptt==0.10.0
 django-recaptcha==2.0.5
+django-settings-export==1.2.1
 django-termsandconditions==1.2.15
 django-websocket-redis==0.5.2
 easy-thumbnails==2.6
 gevent==1.4.0
 kombu==4.6.4
 mock==3.0.5
+psycopg2==2.8.3
 pycrypto==2.6.1
 -e git+https://bitbucket.org/taccaci/pytas.git@v1.4.0#egg=pytas
 pytz==2019.2
