--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ django-termsandconditions==1.2.15
 django-websocket-redis==0.5.2
 easy-thumbnails==2.6
 gevent==1.4.0
+ipython==7.8.0
 kombu==4.6.4
 mock==3.0.5
 psycopg2==2.8.3
