--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,12 +4,23 @@ agavepy==0.9.3
 celery==4.3.0
 cryptography==2.7
 django-bootstrap4==1.0.1
+django-cms==3.7.0
 django-filer==1.5.0
+django-impersonate==1.4.1
 django-mptt==0.10.0
 django-recaptcha==2.0.5
 django-settings-export==1.2.1
 django-termsandconditions==1.2.15
 django-websocket-redis==0.5.2
+djangocms-column==1.9.0
+djangocms-file==2.3.0
+djangocms-googlemap==1.3.0
+djangocms-link==2.5.0
+djangocms-picture==2.3.0
+djangocms-snippet==2.2.0
+djangocms-style==2.2.0
+djangocms-text-ckeditor==3.8.0
+djangocms-video==2.1.1
 easy-thumbnails==2.6
 gevent==1.4.0
 ipython==7.8.0
@@ -22,4 +33,3 @@ pytz==2019.2
 redis==3.3.8
 requests==2.22.0
 sqlparse==0.3.0
-wagtail==2.6.1
