--- a/server/conf/elasticsearch/elasticsearch.yml
+++ b/server/conf/elasticsearch/elasticsearch.yml
@@ -4,6 +4,7 @@
 #
 cluster.name: es-dev
 network.host: 0.0.0.0
+discovery.type: single-node
 #network.publish_host: hostname
 node.name: es01
 #minimum_master_nodes need to be explicitly set when bound on a public IP
