--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 Django==2.2.5
 PyJWT==1.7.1
-agavepy==0.9.3
+-e git+https://github.com/rstijerina/agavepy
 cached-property==1.5.1
 celery==4.3.0
 cryptography==2.7
