add babel eslint loader/parser

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -26,6 +26,7 @@
         "react",
         "prettier"
     ],
+    "parser": "babel-eslint",
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
