--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ agavepy==0.9.3
 cached-property==1.5.1
 celery==4.3.0
 certifi==2019.9.11
+coverage==4.5.4
 cryptography==2.7
 django-bootstrap4==1.0.1
 django-cms==3.7.0
