fix eslint rule

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,7 +31,7 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": ["**/webpack.*.js", "**/.test.js", "**/*.spec.js"]}],
         "semi": [1, "always"],
-        "react/jsx-props-no-spreading": [{
+        "react/jsx-props-no-spreading": [2, {
             "html": "enforce" ,
             "custom": "enforce",
             "exceptions": ["Table", "table", "thead", "tbody", "th", "tr", "td"]
