updating dockerfile to build static content for prod, making sure we don't include secrets, updating path to static files for prod
updating core admin site path, session id name, make file

Adding CMS image to compose dev, updating nginx routing to match

Cleaning up dev compose file, removing ports that don't need to be exposed to host

Add new devops to Readme

--- a/server/conf/docker/Dockerfile
+++ b/server/conf/docker/Dockerfile
@@ -36,4 +36,7 @@ COPY . /srv/www/portal
 
 RUN mkdir -p /var/log/portal
 
+ARG build_client=build_client
+RUN chmod u+x /srv/www/portal/client/build_client.sh && /srv/www/portal/client/build_client.sh $build_client
+
 WORKDIR /srv/www/portal/server
