--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -12,6 +12,15 @@ events {
 
 
 http {
+
+    upstream cms {
+        server frontera_prtl_cms:8000;
+    }
+
+    upstream frontera_core {
+        server frontera_prtl_django:6000;
+    }
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -52,13 +61,89 @@ http {
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers                 "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
 
+    location / {
+        proxy_pass http://cms;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+#   gzip on;
+#   gzip_types application/javascript image/* text/css;
+#   gunzip on;
+
+
+
+    location /auth {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /workbench {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /tickets {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /accounts {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /api {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /login {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /core/media  {
+        alias /srv/www/portal/server/static;
+    }
+
+    location /core/static {
+       alias /srv/www/portal/server/static;
+    }
+
+    location /build {
+       alias /srv/www/portal/server/static/build;
+    }
+
+    location /core {
+        proxy_pass http://frontera_core;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+
+
         location /media  {
-            alias /srv/www/portal/server/media;
+            alias /srv/www/portal/server/cms/media;
         }
 
-        # location /static {
-        #    alias /srv/www/portal/server/static;
-        # }
+        location /static {
+           alias /srv/www/portal/server/cms/static;
+        }
 
         location /favicon.ico {
             alias /srv/www/portal/server/static/favicon.ico;
@@ -66,16 +151,6 @@ http {
 
         location /robots.txt {
             alias /ssrv/www/portal/server/static/robots.txt;
-        }
-
-        location / {
-            proxy_pass  http://django:8000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            #proxy_redirect http://django:8000/ https://frontera.dev/;
-            proxy_read_timeout 360s;
         }
 
         location /ws {
