--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ nohup.out
 server/static
 server/portal/static/vendor/lib/node_modules
 server/media
+server/cms
 
 # Ignore local Django settings
 #server/portal/settings/settings_local.py
@@ -22,6 +23,12 @@ server/portal/settings/settings_secret.py
 #server/portal/settings/settings_celery.py
 #server/portal/settings/elasticsearch.py
 
+*secrets.py
+*.secret
+*settings_secret.py
+# *nginx.conf
+
+docker_repo.var
 server/src
 
 #ignore portal.env
