Revert "Merged in taccaci/neuronex/merge/012120 (pull request #380)"
This reverts commit bd1851dfa68e4f555a1e57008280386fe520837c.

--- a/devops/ansible/playbooks/staging.yml
+++ b/devops/ansible/playbooks/staging.yml
@@ -4,13 +4,14 @@
 # Apply common configuration to all hosts
 - hosts: staging
   roles:
-    - {role: common, tags: ['provision']}
-    - {role: users, tags: ['provision']}
-    - {role: elasticsearch, tags: ['provision']}
-    - {role: rabbitmq, tags: ['provision']}
-    - {role: redis, tags: ['provision']}
-    - {role: git, tags: ['provision']}
-    - {role: newrelic, tags: ['provision']}
+    - common
+    - users
+    - elasticsearch
+    - rabbitmq
+    - redis
+    - git
+    - {role: postgres, tags: ['postgres']}
+    - {role: newrelic, tags: ['deploy']}
     - {role: nginx, tags: ['deploy']}
     - {role: git, tags: ['deploy']}
     - {role: project_setup, tags: ['deploy']}
