--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@hot-loader/react-dom": "^16.11.0",
     "bootstrap": "^4.4.1",
     "cross-fetch": "^3.0.4",
+    "formik": "^2.1.4",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "pluralize": "^8.0.0",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
@@ -31,7 +33,8 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "lint": "eslint .",
