--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -21,6 +21,10 @@ http {
         server frontera_prtl_django:6000;
     }
 
+    upstream websockets {
+        server frontera_prtl_websockets:9000;
+    }
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -118,6 +122,19 @@ http {
         proxy_redirect off;
     }
 
+    location /ws {
+        proxy_pass http://websockets;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
+
     location /core/media  {
         alias /srv/www/portal/server/static;
     }
@@ -153,16 +170,6 @@ http {
 
         location /robots.txt {
             alias /ssrv/www/portal/server/static/robots.txt;
-        }
-
-        location /ws {
-            include     /etc/nginx/uwsgi_params;
-            proxy_pass http://websockets:9000/ws;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_redirect off;
-            proxy_read_timeout 86400;
         }
     }
 
