--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,8 @@ agavepy==0.9.3
 cached-property==1.5.1
 celery==4.3.0
 certifi==2019.9.11
+channels==2.4.0
+channels-redis==2.4.1
 coverage==4.5.4
 cryptography==2.7
 django-bootstrap4==1.0.1
