--- a/server/conf/docker/docker-compose-dev.all.debug.yml
+++ b/server/conf/docker/docker-compose-dev.all.debug.yml
@@ -31,7 +31,7 @@ services:
     container_name: frontera_prtl_memcached
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
     ulimits:
       memlock: -1
     environment:
@@ -41,6 +41,8 @@ services:
       - ../elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - frontera_prtl_es_data:/usr/share/elasticsearch/data
     container_name: frontera_prtl_elasticsearch
+    ports: 
+      - 9200:9200
 
   postgres:
     image: postgres:11.5
