--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+        file: ./server/coverage.xml
         flags: unittests
         name: frontera-server-side
         fail_ci_if_error: false
@@ -67,8 +67,8 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    - run: |
-        cd server
+    - name: pip install
+      run: |
         pip install -r requirements.txt
     - name: Server-Side Linting
       run: |
