--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: pip install
-      run: |
-        cd server
-        pip install -r requirements.txt
+    - run: pip install -r server/requirements.txt
     - name: Run Server-side unit tests and generate coverage report
       run: |
         cd server
@@ -67,9 +64,7 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    - name: pip install
-      run: |
-        pip install -r requirements.txt
+    - run: pip install -r server/requirements.txt
     - name: Server-Side Linting
       run: |
         git fetch origin "+refs/heads/master:refs/remotes/origin/master"
