--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v1
       with:
-        # Version range or exact version of a Python version to use, using SemVer's version range syntax.
-        python-version: 3.6 # optional, default is 3.x
-        # The target architecture (x86, x64) of the Python interpreter.
-        architecture: x64 # optional, default is x64
+        python-version: 3.6
 
     - uses: actions/cache@v1
       with:
@@ -31,20 +28,20 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
+    - run: pip install -r server/requirements.txt
     - name: Run Server-side unit tests and generate coverage report
       run: |
         cd server
-        pip install -r requirements.txt
-        pytest --cov-config=.coveragerc --cov=server/portal --cov-report=xml -ra
+        pytest --cov-config=.coveragerc --cov=portal --cov-report=xml -ra
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+        file: ./server/coverage.xml
         flags: unittests
         name: frontera-server-side
-        fail_ci_if_error: false
+#         fail_ci_if_error: false
 
   Server_Side_Linting:
     runs-on: ubuntu-18.04
@@ -64,13 +61,12 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-
+    - run: pip install -r server/requirements.txt
     - name: Server-Side Linting
       run: |
-        cd server
-        pip install -r requirements.txt
         git fetch origin "+refs/heads/master:refs/remotes/origin/master"
         git diff -U0 origin/master..HEAD | flake8 --diff
+#         pylint --rcfile=server/.pylintrc $(git diff origin/master..HEAD --name-only "*.py")
 
   Client_Side_Unit_Tests:
     runs-on: ubuntu-18.04
@@ -79,7 +75,7 @@ jobs:
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v1
       with:
-        version: 12.x
+        node-version: 12.x
 
     - uses: actions/cache@v1
       with:
@@ -88,19 +84,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
+    - name: npm install
+      run: |
+        cd client
+        npm install
     - name: Client Side Unit Tests
       run: |
         cd client
-        npm install
         npm run test
-#        bash <(curl -s https://codecov.io/bash) -cF javascript
 
-    - name: Generate coverage report
-      run: |
-        cd client
-        npm install
-        npm run test
-        bash <(curl -s https://codecov.io/bash) -cF javascript
+    - run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }} -cF javascript
 
   Client_Side_Linting:
     runs-on: ubuntu-18.04
@@ -109,7 +102,7 @@ jobs:
     - name: Setup Node.js for use with actions
       uses: actions/setup-node@v1
       with:
-        version: 12.x
+        node-version: 12.x
 
     - uses: actions/cache@v1
       with:
@@ -118,8 +111,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - name: Client Side Linting
+    - name: npm install
       run: |
         cd client
         npm install
+    - name: Client Side Linting
+      run: |
+        cd client
         npm run lint
