--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-table": "^7.0.0-rc.6",
     "react-table-6": "^6.11.0",
     "react-virtualized-auto-sizer": "^1.0.2",
+    "styled-components": "^5.1.0",
     "react-window": "^1.8.5",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
