--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -72,7 +72,9 @@ http {
 #   gzip_types application/javascript image/* text/css;
 #   gunzip on;
 
-
+    location /user-guide {
+         alias /srv/www/portal/server/docs;
+    }
 
     location /auth {
         proxy_pass http://frontera_core;
