--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,12 @@
     "react-table": "^7.0.0-rc.6",
     "react-table-6": "^6.11.0",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "styled-components": "^5.1.0",
     "react-window": "^1.8.5",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "styled-components": "^5.1.0",
     "uuid": "^7.0.2",
     "yup": "^0.28.0"
   },
@@ -69,6 +69,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-react-app": "^9.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.1",
