--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,11 @@
     "yup": "^0.28.0"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint .",
+    "lint:css": "npm run lint:css:native && npm run lint:css:sass",
+    "lint:css:native": "stylelint **/*.css",
+    "lint:css:sass": "stylelint **/*.scss",
     "build": "NODE_ENV=production BABEL_ENV=production webpack -p --display-error-details --config webpack.prod.js",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
@@ -104,6 +108,7 @@
     "redux-saga-test-plan": "^4.0.0-rc.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
+    "stylelint": "^13.3.3",
     "terser-webpack-plugin": "^2.2.2",
     "weak-key": "^1.0.1",
     "webpack": "^4.41.2",
