--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-table": "^7.0.0-rc.6",
+    "react-table": "^7.0.5",
     "react-table-6": "^6.11.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
