--- a/client/.babelrc
+++ b/client/.babelrc
@@ -10,6 +10,22 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        // SEE: https://github.com/gajus/babel-plugin-react-css-modules/#options
+        ["react-css-modules", {
+            "filetypes": {
+                // Allow plugin to recognize `.scss` via required convoluted method
+                ".scss": { "syntax": "postcss-scss" }
+            },
+            // Support third-party component `className`-like properties
+            "attributeNames": { "activeStyleName": "activeClassName" },
+            "webpackHotModuleReloading": true,
+            // WARNING: This MUST match `localIdentName` in `client/webpack.*.js`
+            "generateScopedName": "[name]__[local]--[hash:base64:10]",
+            // Allow multiple stylesheets to be imported without requiring
+            // ["Named `styleName` resolution"](https://github.com/gajus/babel-plugin-react-css-modules#named-stylename-resolution)
+            // RFE: Do not allow this, long-term…
+            "autoResolveMultipleImports": true
+        }]
     ]
 }
