--- a/client/package.json
+++ b/client/package.json
@@ -37,9 +37,7 @@
   "scripts": {
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint .",
-    "lint:css": "npm run lint:css:native && npm run lint:css:sass",
-    "lint:css:native": "stylelint '**/*.css'",
-    "lint:css:sass": "stylelint '**/*.scss'",
+    "lint:css": "stylelint '**/*.{css,scss,sass}'",
     "build": "NODE_ENV=production BABEL_ENV=production webpack -p --display-error-details --config webpack.prod.js",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
