--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -80,42 +80,7 @@ http {
             alias /srv/www/portal/server/docs;
         }
 
-        location /auth {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-
-        location /workbench {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-
-        location /tickets {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-
-        location /accounts {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-
-        location /api {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-
-        location /login {
+        location ~ ^/(core|auth|workbench|tickets|accounts|api|login) {
             proxy_pass http://frontera_core;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
@@ -145,13 +110,6 @@ http {
 
         location /build {
         alias /srv/www/portal/server/static/build;
-        }
-
-        location /core {
-            proxy_pass http://frontera_core;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
         }
 
         location /media  {
