--- a/server/conf/nginx/nginx.conf
+++ b/server/conf/nginx/nginx.conf
@@ -53,7 +53,7 @@ http {
 
         charset utf-8;
 
-        client_max_body_size 2G;
+        client_max_body_size 500M;
 
         # Extra slashes matter to Agave
         merge_slashes off;
